style.css
@import url('https://fonts.googleapis.com/css2?family=Gentium+Book+Basic:ital,wght@0,400;0,700;1,400;1,700&display=swap');
:root{
    /*
        opacity .7 light green: #BBDBB4B3
        light green: #BBDBB4;
        opacity .7 dark green: #223021b3;
        dark green: #223021;
        dark purple: #302131;
        light purple: #d3b3db;
    */
    --mainBG: #BBDBB4B3;
    --mainText: #302131;
    --darkBG: #223021b3;
    --lightText: #d3b3db;
}
*{
    margin: 0;
    padding: 0;
    text-decoration: none;
    /*color: var(--mainText);*/
    box-sizing: border-box;
}
html{
    scroll-behavior: smooth;
    background-image: url("https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.tilingtextures.com%2Fwp-content%2Fuploads%2F2019%2F05%2F0090b-1024x1024.jpg&f=1&nofb=1");
    filter: invert(0);
}
body{
    background-color: var(--mainBG);
    font-family: 'Gentium Book Basic', serif;
    font-size: 16px;
    box-sizing: border-box;
    width: 100%;
}
h1, h2{
    text-transform: capitalize;
    margin: 1.5em;
}

nav{
    padding-block: 2em;
    /*background-image: linear-gradient(53deg, #ccfffc, #ffcccf);*/
    height: 6.3125em;
}

p, li{
    line-height: 2em;
    /*margin: .5em*/
}

nav ul{
    justify-content: space-around;
}

nav ul li{
    list-style-type: none;
}

nav ul li a{
    text-transform: uppercase;
    font-weight: bold;
    opacity: .6;
    transition: .3s ease-in-out;
}
nav ul li a:hover{
    opacity: 1;
    text-shadow: 1px 5px 5px rgb(139, 139, 139);
    font-size: 18px;
    transform: translateX(20px);
}
i{
    padding-bottom: 2em;
}

#mainContainer{
    max-width: 65%;
    margin: auto;
}
.me{
    align-items: center;
    height: 95vh;
}

.box{
    height: 100vh;
}
.cap{
    text-transform: capitalize;
}

#cr-logo{
    height: 2em;
}

/*page navigation*/
#page-nav{
    background-color: rgba(0, 0, 0, 0.25);
    position: fixed;
    z-index: 10;
    top: 40%;
    left: -6%;
    transition: .3s ease-out;
    padding-right: 1.5em;
}
#page-nav:hover{
    left: 0%;
    padding-right: 0em;
}
/*dark mode toggle*/
#dTContainer{
    position: fixed;
}
#darkToggle{
    background-color: rgba(0, 0, 0, 0.125);
    border-radius: 2em;
    opacity: .25;
    position: fixed;
    z-index: 10;
    bottom: 2%;
    right: 1%;
    text-transform: uppercase;
    display: flex;
    width: 116px;
}
#darkToggle:hover{
    opacity: 1;
}
#darkToggle p{
    padding: .5em;
}
.container--border-main-color{
    border: 2px solid var(--mainText);
}
.container--border-light-color{
    border: 2px solid var(--lightText);
}

.slider{
    height: 40px;
    width: 53px;
    border-radius: 2em;
    position: absolute;
    top: 9%;
    transition: .5s ease-in-out;
}
.slider--right{
    transform: translateX(54px);
    background-color:  var(--mainText);
}
.slider--left{
    transform: translateX(6px);
    background-color:  var(--lightText);
}

#kingsticker{
    position: fixed;
    top: 0px;
    right: 10em;
    transform: rotate(180deg) translateY(60px);
    /* translateY(3px)*/
}

.tabs{
    /*background-color: coral;*/
    margin: 1em;
    text-transform: uppercase;
    opacity: .4;
}
.tabs:hover{
    opacity: 1;
}

/*body dark bg*/
.body--bg-dark{
    background-color: var(--darkBG);
}
/*light txt*/
.body--txt-light{
    color: var(--lightText);
}
/*light bg*/
.body--bg-light{
    background-color: var(--mainBG);
}
/*dark txt*/
.body--txt-dark{
    color: var(--mainText);
}

/*flex*/
.flex{
    display: flex;
}

/* flex row*/
.row{
    flex-direction: row;
}

/* flex column*/
.column{
    flex-direction: column;
}

/*space evenly*/
.se{
    justify-content: space-evenly;
}

/*justify content center*/
.jc-c{
    justify-content: center;
}

/*align center*/
.c{
    align-items: center;
}

/*align baseline*/
.bl{
    align-items: baseline;
}

